<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">سلام</string>
    <string name="buy">خريد درون برنامه</string>
    <string name="app_name">جلولینه</string>
    <string name="aboutTitle"></string>
    <string name="aboutTitleBuy">نسخه 1.2\n
نسخه اي که شما در دست داريد نسخه آزمايشي است براي خريد و پرداخت درون برنامه اي روي تاييد کليک کنيد
</string>
    <string name="help_info"> دکمه info :حاوي اطلاعات درباره طراحي نرم افزار مي باشد.</string>
    <string name="help_favorite_add"> دکمه افزودن به favorite: مي توانيد آیتم مورد نظرتان را به ليست علاقه مندي ها اضافه کنيد</string>
    <string name="help_favorite"> دکمه   favorite:با فشردن اين دکمه مي توانيد آیتمهايي را که به ليست علاقمنديها اضافه کرده ايد مشاهده کنيد.</string>
    <string name="help_read_add">دکمه ثبت محل مطالعه : با اين دکمه ميتوانيد محل مطالعه را ثبت نموده و با دکمه ادامه مطالعه از همان محل قبلي شروع به ادامه مطالعه نماييد</string>
    <string name="help_read">دکمه ادامه مطالعه : شما را به محل مطالعه ، که قبلا ثبت کرده ايد مي برد</string>
    <string name="help_share"> دکمه  share :با کليک برروي اين دکمه مي توانيد آیتم مورد نظر را با ديگران به اشتراک بگذاريد..</string>
    <string name="help_content_search"> دکمه content search:اگر ميخواهيد در محتواي کتاب جستجو کنيد روي اين گزينه کليک کنيد . شماره وارد صفحه اي ميکند که در آن امکان جستجو در محتوا وجود دارد.</string>
    <string name="help_font"> دکمه Font :با کليک برروي اين دکمه مي توانيد اندازه فونت را تغيير دهيد.</string>
    <string name="help_comment">شما مي توانيد با لمس طولاني صفحه ،صفحه مطالعه را بزرگ کنيد و همچنين قابليت چرخيدن صفحه همراه با چرخش گوشي را نيز دارد.  
</string>
    <string name="DefaultTypeface">font/irn.ttf</string>
    <string name="NextTypeface">font/irn.ttf</string>
    <string name="NextMenuType"></string>
    <string name="base64Encode">MIHNMA0GCSqGSIb3DQEBAQUAA4G7ADCBtwKBrwDKXMo5g6dBs0M1PuQ8bmok4Q4oIox4jPKBbsq5RIGJ76c9RQ/sNg7pabjFDD5GV8ORmilozRd+QaGS3Hu/tPtEDrlqLq9EVeeIZbf1MqKEc/uvOSwO8UfhNifNnk9GUARVhsGx7req+URnUuL1ikWH3ddXTfwR4x8BinuvU2YVkwT+LdOtbYGx57j1Fl/GpYRr/R5jdACQwb4S1xlOqGStDUihRnwyhEOvTYX96I8CAwEAAQ==</string>
    <string name="SKU_PREMIUM">score_1</string>
    <string name="purchase_sheet_title">نسخه کامل را فعال کن</string>
    <string name="purchase_sheet_subtitle">با خريد درون برنامه اي، همه بخش هاي کتاب بدون محدوديت در دسترس شما قرار مي گيرد.</string>
    <string name="purchase_sheet_description">اگر از نسخه آزمايشي استفاده مي کنيد، با يک پرداخت سريع مي توانيد تجربه کامل و بدون وقفه را فعال کنيد.</string>
    <string name="purchase_sheet_benefit_one">• باز شدن تمام بخش هاي قفل شده</string>
    <string name="purchase_sheet_benefit_two">• بازيابي خريد پس از نصب مجدد برنامه</string>
    <string name="purchase_sheet_benefit_three">• فعال سازي سريع و مستقيم از طريق کافه بازار</string>
    <string name="purchase_sheet_action">شروع خريد امن</string>
    <string name="purchase_sheet_later">بعدا تصميم مي گيرم</string>
    <string name="story_list_new_subtitle">يک بخش را انتخاب کن تا محتوای آن با نمايش بهتر باز شود.</string>
    <string name="story_list_new_search_hint">جستجو در عنوان بخش ها...</string>
    <string name="story_list_new_meta">براي نمايش لمس کن</string>
    <string name="game_title_text">انتخاب و جا به جایی</string>
    <string name="game_hint_text">دو حرف را انتخاب کن تا جابه‌جا شوند. بزرگنمایی با دو انگشت فعال است.</string>
    <string name="game_help_button">راهنما</string>
    <string name="game_help_dialog_title">راهنمای بازی</string>
    <string name="game_help_dialog_close">بستن</string>
    <string name="score_purchase_title">خرید امتیاز</string>
    <string name="score_purchase_desc">برای ادامه بازی یکی از بسته‌های امتیاز را خریداری کنید.</string>
    <string name="score_purchase_cancel">انصراف</string>
    <string name="score_purchase_buy">خرید</string>
    <string name="score_purchase_price_format">%1$d تومان</string>
    <string name="score_purchase_score_format">%1$d امتیاز</string>
    <string name="score_purchase_loading">در حال دریافت بسته‌های امتیاز...</string>
    <string name="score_purchase_load_failed">خطا در دریافت بسته‌ها. از بسته‌های پیش‌فرض استفاده شد.</string>
    <string name="gift_code_title">اعمال کد هدیه</string>
    <string name="gift_code_hint">کد هدیه</string>
    <string name="gift_code_apply">اعمال کد هدیه</string>
    <string name="gift_code_invalid">کد هدیه نامعتبر است</string>
    <string name="gift_code_success">امتیاز %1$d برای شما اضافه شد</string>
    <string name="gift_code_error">خطا در اعمال کد هدیه</string>
    <string name="leaderboard_title">صدر امتیازات</string>
    <string name="leaderboard_loading">در حال دریافت لیست بهترین‌ها...</string>
    <string name="leaderboard_col_name">نام</string>
    <string name="leaderboard_col_rank">رتبه</string>
    <string name="leaderboard_col_level">مرحله</string>
    <string name="leaderboard_col_score">امتیاز</string>
    <string name="leaderboard_my_rank">رتبه شما</string>
    <string name="leaderboard_profile_title">برای نمایش رتبه‌بندی، نام و شماره موبایل را وارد کنید</string>
    <string name="leaderboard_name_hint">نام</string>
    <string name="leaderboard_mobile_hint">شماره موبایل</string>
    <string name="leaderboard_name_required_hint">نام (ضروری)</string>
    <string name="leaderboard_mobile_optional_hint">شماره موبایل (اختیاری)</string>
    <string name="leaderboard_save">ذخیره و نمایش</string>
    <string name="leaderboard_error">خطا در دریافت رتبه‌بندی</string>

    <!-- Search Page Strings -->
    <string name="search_page_title">جستجو</string>
    <string name="search_hint">جستجو کنید...</string>
    <string name="search_tab_title">جستجو در عنوان</string>
    <string name="search_tab_description">جستجو در توضیحات</string>
    <string name="favorites">علاقه‌مندی‌ها</string>
    <string name="back">بازگشت</string>
    <string name="share">اشتراک‌گذاری</string>
    <string name="add_to_favorites">افزودن به علاقه‌مندی‌ها</string>
    <string name="remove_from_favorites">حذف از علاقه‌مندی‌ها</string>
    <string name="empty_search_message">برای جستجو، عبارت مورد نظر را وارد کنید</string>
    <string name="no_results_message">نتیجه‌ای یافت نشد</string>
    <string name="error_search_message">خطا در جستجو. لطفاً دوباره تلاش کنید</string>
    <string name="empty_state">خالی</string>
    <string name="error_state">خطا</string>
    <string name="loading">در حال بارگذاری...</string>
    <string name="search_results_count">%d نتیجه یافت شد</string>
    <string name="share_text_format">%1$s\n\n%2$s</string>
    <string name="database_error">خطا در دسترسی به پایگاه داده</string>

</resources>
